containerize the configuration server